--- a/gwt20/samples/gwt20-demo/src/main/webapp/WEB-INF/web.xml
+++ b/gwt20/samples/gwt20-demo/src/main/webapp/WEB-INF/web.xml
@@ -22,7 +22,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>AtmosphereServlet</servlet-name>
-        <url-pattern>/GwtWrapperDemo/atmosphere/*</url-pattern>
+        <url-pattern>/GwtRpcDemo/atmosphere/*</url-pattern>
     </servlet-mapping>
 
     <welcome-file-list>
