--- a/gwt20/samples/gwt20-json/src/main/webapp/WEB-INF/web.xml
+++ b/gwt20/samples/gwt20-json/src/main/webapp/WEB-INF/web.xml
@@ -1,21 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
-    <display-name>gwt-jerset-rpc</display-name>
+    <display-name>gwt-test</display-name>
 
     <servlet>
         <description>AtmosphereServlet</description>
         <servlet-name>AtmosphereServlet</servlet-name>
         <servlet-class>org.atmosphere.cpr.AtmosphereServlet</servlet-class>
-
-        <init-param>
-            <param-name>com.sun.jersey.config.property.packages</param-name>
-            <param-value>org.atmosphere.samples.server;org.atmosphere.gwt20.jersey</param-value>
-        </init-param>
-        <init-param>
-            <param-name>org.atmosphere.useNative</param-name>
-            <param-value>true</param-value>
-        </init-param>
         <!--<init-param>
             <param-name>org.atmosphere.cpr.AtmosphereInterceptor.disableDefaults</param-name>
             <param-value>true</param-value>
@@ -27,10 +18,10 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>AtmosphereServlet</servlet-name>
-        <url-pattern>/atmo/*</url-pattern>
+        <url-pattern>/GwtJsonDemo/atmosphere/*</url-pattern>
     </servlet-mapping>
 
     <welcome-file-list>
-        <welcome-file>index.html</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 </web-app>
