--- a/gwt20/pom.xml
+++ b/gwt20/pom.xml
@@ -22,11 +22,14 @@
     </properties>
 
     <modules>
-        <module>atmosphere-gwt20-client</module>
-        <module>atmosphere-gwt20-jersey</module>
-        <module>atmosphere-gwt20-common</module>
-        <module>atmosphere-gwt20-server</module>
-        <module>atmosphere-gwt20-jackson</module>
+        <module>modules/atmosphere-gwt20-client</module>
+        <module>modules/atmosphere-gwt20-jersey</module>
+        <module>modules/atmosphere-gwt20-common</module>
+        <module>modules/atmosphere-gwt20-server</module>
+        <module>modules/atmosphere-gwt20-jackson</module>
+        <module>samples/gwt20-rpc/</module>
+        <module>samples/gwt20-jersey-rpc</module>
+        <module>samples/gwt20-json</module>
     </modules>
 
     <build>
