--- a/gwt20/samples/gwt20-rpc/pom.xml
+++ b/gwt20/samples/gwt20-rpc/pom.xml
@@ -6,6 +6,7 @@
         <groupId>org.atmosphere.extensions</groupId>
         <artifactId>atmosphere-gwt20</artifactId>
         <version>1.1.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <groupId>org.atmosphere.samples</groupId>
