--- a/gwt20/samples/gwt20-managed-rpc/src/main/webapp/WEB-INF/web.xml
+++ b/gwt20/samples/gwt20-managed-rpc/src/main/webapp/WEB-INF/web.xml
@@ -7,10 +7,10 @@
         <description>AtmosphereServlet</description>
         <servlet-name>AtmosphereServlet</servlet-name>
         <servlet-class>org.atmosphere.cpr.AtmosphereServlet</servlet-class>
-        <init-param>
-            <param-name>org.atmosphere.cpr.AtmosphereInterceptor</param-name>
-            <param-value>org.atmosphere.gwt20.server.GwtRpcInterceptor</param-value>
-        </init-param>
+        <!--<init-param>-->
+            <!--<param-name>org.atmosphere.cpr.AtmosphereInterceptor</param-name>-->
+            <!--<param-value>org.atmosphere.gwt20.server.GwtRpcInterceptor</param-value>-->
+        <!--</init-param>-->
         <!--<init-param>
             <param-name>org.atmosphere.cpr.AtmosphereInterceptor.disableDefaults</param-name>
             <param-value>true</param-value>
