--- a/gwt20/modules/atmosphere-gwt20-client/pom.xml
+++ b/gwt20/modules/atmosphere-gwt20-client/pom.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <parent>
+    <parent>
+        <groupId>org.atmosphere.extensions</groupId>
+        <artifactId>atmosphere-gwt20</artifactId>
+        <version>1.1.0-SNAPSHOT</version>
+        <relativePath>../..</relativePath>
+    </parent>
+
     <groupId>org.atmosphere.extensions</groupId>
-    <artifactId>atmosphere-gwt20</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
-  </parent>
-  
-  <groupId>org.atmosphere.extensions</groupId>
-  <artifactId>atmosphere-gwt20-client</artifactId>
-  <name>atmosphere-gwt20-client</name>
-  <url>http://maven.apache.org</url>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-  
+    <artifactId>atmosphere-gwt20-client</artifactId>
+    <name>atmosphere-gwt20-client</name>
+    <url>http://maven.apache.org</url>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <build>
         <resources>
             <resource>
@@ -30,27 +32,27 @@
         </resources>
     </build>
 
-  <dependencies>
-    <dependency>
-      <groupId>org.atmosphere</groupId>
-      <artifactId>atmosphere-jquery</artifactId>
-      <type>war</type>
-    </dependency>
-    <dependency>
-      <groupId>org.atmosphere.extensions</groupId>
-      <artifactId>atmosphere-gwt20-common</artifactId>
-    </dependency>    
-    <dependency>
-        <groupId>com.google.gwt</groupId>
-        <artifactId>gwt-user</artifactId>
-    </dependency>
-    <dependency>
-        <groupId>com.google.gwt</groupId>
-        <artifactId>gwt-dev</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-    </dependency>
-  </dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>org.atmosphere</groupId>
+            <artifactId>atmosphere-jquery</artifactId>
+            <type>war</type>
+        </dependency>
+        <dependency>
+            <groupId>org.atmosphere.extensions</groupId>
+            <artifactId>atmosphere-gwt20-common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.gwt</groupId>
+            <artifactId>gwt-user</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.gwt</groupId>
+            <artifactId>gwt-dev</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+    </dependencies>
 </project>
