--- a/gwt20/samples/gwt20-jersey-rpc/pom.xml
+++ b/gwt20/samples/gwt20-jersey-rpc/pom.xml
@@ -11,6 +11,7 @@
 
     <groupId>org.atmosphere.samples</groupId>
     <artifactId>gwt20-jersey-rpc</artifactId>
+    <version>1.1.0-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>gwt20-jersey-rpc</name>
 
