--- a/gwt20/samples/gwt20-rpc/pom.xml
+++ b/gwt20/samples/gwt20-rpc/pom.xml
@@ -10,6 +10,7 @@
 
     <groupId>org.atmosphere.samples</groupId>
     <artifactId>gwt20-rpc</artifactId>
+    <version>1.1.0-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>gwt20-rpc</name>
 
