--- a/pom.xml
+++ b/pom.xml
@@ -263,8 +263,8 @@
         <module>weblogic/</module>
         <module>socketio/</module>
         <module>cometd/</module>
-        <module>gwt</module>
-		<module>gwt20</module>
+        <module>gwt/</module>
+		<module>gwt20/</module>
     </modules>
     <reporting>
         <outputDirectory>target/site</outputDirectory>
