--- a/gwt20/pom.xml
+++ b/gwt20/pom.xml
@@ -9,8 +9,8 @@
     </parent>
 
     <groupId>org.atmosphere.extensions</groupId>
-    <artifactId>atmosphere-gwt20</artifactId>
-    <name>atmosphere-gwt20</name>
+    <artifactId>atmosphere-gwt20-project</artifactId>
+    <name>atmosphere-gwt20-project</name>
     <version>1.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
@@ -22,11 +22,7 @@
     </properties>
 
     <modules>
-        <module>modules/atmosphere-gwt20-client</module>
-        <module>modules/atmosphere-gwt20-jersey</module>
-        <module>modules/atmosphere-gwt20-common</module>
-        <module>modules/atmosphere-gwt20-server</module>
-        <module>modules/atmosphere-gwt20-jackson</module>
+        <module>modules</module>
         <module>samples/gwt20-managed-rpc/</module>
         <module>samples/gwt20-rpc/</module>
         <module>samples/gwt20-jersey-rpc</module>
