--- a/gwt20/modules/atmosphere-gwt20-client/pom.xml
+++ b/gwt20/modules/atmosphere-gwt20-client/pom.xml
@@ -7,7 +7,7 @@
         <groupId>org.atmosphere.extensions</groupId>
         <artifactId>atmosphere-gwt20</artifactId>
         <version>1.1.0-SNAPSHOT</version>
-        <relativePath>../..</relativePath>
+        <relativePath>../</relativePath>
     </parent>
 
     <groupId>org.atmosphere.extensions</groupId>
