--- a/gwt20/modules/pom.xml
+++ b/gwt20/modules/pom.xml
@@ -8,6 +8,7 @@
         <groupId>org.atmosphere.extensions</groupId>
         <artifactId>atmosphere-gwt20-project</artifactId>
         <version>1.1.0-SNAPSHOT</version>
+        <relativePath>../</relativePath>
     </parent>
 
     <groupId>org.atmosphere</groupId>
