--- a/gwt20/pom.xml
+++ b/gwt20/pom.xml
@@ -5,7 +5,7 @@
         <groupId>org.atmosphere</groupId>
         <artifactId>atmosphere-extension-project</artifactId>
         <version>1.1.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
+        <relativePath>../</relativePath>
     </parent>
 
     <groupId>org.atmosphere.extensions</groupId>
