--- a/gwt20/samples/gwt20-managed-rpc/pom.xml
+++ b/gwt20/samples/gwt20-managed-rpc/pom.xml
@@ -4,7 +4,7 @@
 
     <parent>
         <groupId>org.atmosphere.extensions</groupId>
-        <artifactId>atmosphere-gwt20</artifactId>
+        <artifactId>atmosphere-gwt20-project</artifactId>
         <version>1.1.0-SNAPSHOT</version>
         <relativePath>../..</relativePath>
     </parent>
