--- a/gwt20/samples/gwt20-rpc/pom.xml
+++ b/gwt20/samples/gwt20-rpc/pom.xml
@@ -4,8 +4,9 @@
 
     <parent>
         <groupId>org.atmosphere.extensions</groupId>
-        <artifactId>atmosphere-gwt20</artifactId>
+        <artifactId>atmosphere-gwt20-project</artifactId>
         <version>1.1.0-SNAPSHOT</version>
+        <relativePath>../..</relativePath>
     </parent>
 
     <groupId>org.atmosphere.samples</groupId>
