--- a/pom.xml
+++ b/pom.xml
@@ -497,7 +497,7 @@
     <properties>
         <jetty-version>6.1.22</jetty-version>
         <jersey-version>1.14</jersey-version>
-        <atmosphere-version>1.1.0-SNAPSHOT</atmosphere-version>
+        <atmosphere-version>1.1.0.RC3</atmosphere-version>
         <jaxb-version>2.1</jaxb-version>
         <jackson-version>1.3.1</jackson-version>
         <junit-version>3.8.1</junit-version>
