--- a/gwt20/pom.xml
+++ b/gwt20/pom.xml
@@ -4,14 +4,14 @@
     <parent>
         <groupId>org.atmosphere</groupId>
         <artifactId>atmosphere-extension-project</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.1.0.RC2</version>
         <relativePath>../</relativePath>
     </parent>
 
     <groupId>org.atmosphere.extensions</groupId>
     <artifactId>atmosphere-gwt20-project</artifactId>
     <name>atmosphere-gwt20-project</name>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0.RC2</version>
     <packaging>pom</packaging>
 
     <url>https://github.com/Atmosphere/atmosphere-extensions/gwt20</url>
@@ -55,28 +55,28 @@
             <dependency>
                 <groupId>org.atmosphere.extensions</groupId>
                 <artifactId>atmosphere-gwt20-common</artifactId>
-                <version>1.1.0-SNAPSHOT</version>
+                <version>1.1.0.RC2</version>
             </dependency>
             <dependency>
                 <groupId>org.atmosphere.extensions</groupId>
                 <artifactId>atmosphere-gwt20-client</artifactId>
-                <version>1.1.0-SNAPSHOT</version>
+                <version>1.1.0.RC2</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.atmosphere.extensions</groupId>
                 <artifactId>atmosphere-gwt20-server</artifactId>
-                <version>1.1.0-SNAPSHOT</version>
+                <version>1.1.0.RC2</version>
             </dependency>
             <dependency>
                 <groupId>org.atmosphere.extensions</groupId>
                 <artifactId>atmosphere-gwt20-jersey</artifactId>
-                <version>1.1.0-SNAPSHOT</version>
+                <version>1.1.0.RC2</version>
             </dependency>
             <dependency>
                 <groupId>org.atmosphere.extensions</groupId>
                 <artifactId>atmosphere-gwt20-jackson</artifactId>
-                <version>1.1.0-SNAPSHOT</version>
+                <version>1.1.0.RC2</version>
             </dependency>
             <dependency>
                 <groupId>com.google.gwt</groupId>
