Adds an extension for clustering thanks to RMI

--- a/pom.xml
+++ b/pom.xml
@@ -265,6 +265,7 @@
         <module>cometd/</module>
         <module>gwt/</module>
 		<module>gwt20/</module>
+        <module>rmi</module>
     </modules>
     <reporting>
         <outputDirectory>target/site</outputDirectory>
