--- a/pom.xml
+++ b/pom.xml
@@ -253,6 +253,7 @@
     </profiles>
 
     <modules>
+        <module>rabbitmq</module>
         <module>guice/</module>
         <module>spring/</module>
         <module>jgroups/</module>
@@ -467,7 +468,7 @@
     <properties>
         <jetty-version>6.1.22</jetty-version>
         <jersey-version>1.14</jersey-version>
-        <atmosphere-version>1.1.0.RC3</atmosphere-version>
+        <atmosphere-version>1.1.0-SNAPSHOT</atmosphere-version>
         <jaxb-version>2.1</jaxb-version>
         <jackson-version>1.3.1</jackson-version>
         <junit-version>3.8.1</junit-version>
