--- a/rabbitmq/samples/jersey-pubsub/pom.xml
+++ b/rabbitmq/samples/jersey-pubsub/pom.xml
@@ -7,7 +7,7 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>atmosphere-redis-demo</artifactId>
+    <artifactId>atmosphere-rabbitmq-demo</artifactId>
     <packaging>war</packaging>
     <name>atmosphere-rabbitmq-demo</name>
 
