--- a/rabbitmq/samples/jersey-pubsub/pom.xml
+++ b/rabbitmq/samples/jersey-pubsub/pom.xml
@@ -4,7 +4,7 @@
         <groupId>org.atmosphere</groupId>
         <artifactId>atmosphere-extension-project</artifactId>
         <version>1.1.0-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
+        <relativePath>../../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>atmosphere-rabbitmq-demo</artifactId>
