--- a/gwt20/modules/atmosphere-gwt20-client/pom.xml
+++ b/gwt20/modules/atmosphere-gwt20-client/pom.xml
@@ -33,9 +33,11 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.atmosphere</groupId>
-            <artifactId>atmosphere-jquery</artifactId>
+            <groupId>org.atmosphere.client</groupId>
+            <artifactId>javascript</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
             <type>war</type>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.atmosphere.extensions</groupId>
