--- a/gwt20/samples/gwt20-jersey-rpc/pom.xml
+++ b/gwt20/samples/gwt20-jersey-rpc/pom.xml
@@ -35,7 +35,7 @@
                 <configuration>
                     <module>${gwtModule}</module>
                     <gwtVersion>${gwt-version}</gwtVersion>
-                    <runTarget>http://localhost:8888/index.jsp</runTarget>
+                    <runTarget>http://localhost:8888/index.html</runTarget>
                     <noServer>false</noServer>
                     <sourcesOnPath>true</sourcesOnPath>
                     <extraJvmArgs>-Djava.util.logging.config.file=${project.build.outputDirectory}/logging.properties</extraJvmArgs>
@@ -100,6 +100,13 @@
         <dependency>
             <groupId>org.atmosphere.extensions</groupId>
             <artifactId>atmosphere-gwt20-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.atmosphere.client</groupId>
+            <artifactId>javascript</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+            <type>war</type>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.atmosphere.extensions</groupId>
