--- a/gwt20/samples/gwt20-json/pom.xml
+++ b/gwt20/samples/gwt20-json/pom.xml
@@ -100,8 +100,15 @@
         <dependency>
             <groupId>org.atmosphere.extensions</groupId>
             <artifactId>atmosphere-gwt20-client</artifactId>
+        </dependency>        
+        <dependency>
+            <groupId>org.atmosphere.client</groupId>
+            <artifactId>javascript</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+            <type>war</type>
+            <scope>compile</scope>
         </dependency>
-		<dependency>
+        <dependency>
             <groupId>org.atmosphere.extensions</groupId>
             <artifactId>atmosphere-gwt20-server</artifactId>
         </dependency>
