--- a/gwt20/samples/gwt20-rpc/pom.xml
+++ b/gwt20/samples/gwt20-rpc/pom.xml
@@ -101,7 +101,14 @@
             <groupId>org.atmosphere.extensions</groupId>
             <artifactId>atmosphere-gwt20-client</artifactId>
         </dependency>
-		<dependency>
+        <dependency>
+            <groupId>org.atmosphere.client</groupId>
+            <artifactId>javascript</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+            <type>war</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>org.atmosphere.extensions</groupId>
             <artifactId>atmosphere-gwt20-server</artifactId>
         </dependency>       
