--- a/guice/samples/chat-guice/pom.xml
+++ b/guice/samples/chat-guice/pom.xml
@@ -46,9 +46,9 @@
             <version>${logback-version}</version>
         </dependency>
         <dependency>
-            <groupId>org.atmosphere</groupId>
-            <artifactId>atmosphere-jquery</artifactId>
-            <version>${atmosphere-version}</version>
+            <groupId>org.atmosphere.client</groupId>
+            <artifactId>jquery</artifactId>
+            <version>${javascript-version}</version>
             <type>war</type>
         </dependency>
     </dependencies>
