--- a/guice/samples/di-guice-sample/pom.xml
+++ b/guice/samples/di-guice-sample/pom.xml
@@ -14,9 +14,9 @@
     <name>atmosphere-di-guice-sample</name>
     <dependencies>
         <dependency>
-            <groupId>org.atmosphere</groupId>
-            <artifactId>atmosphere-jquery</artifactId>
-            <version>${atmosphere-version}</version>
+            <groupId>org.atmosphere.client</groupId>
+            <artifactId>jquery</artifactId>
+            <version>${javascript-version}</version>
             <type>war</type>
         </dependency>
         <dependency>
