--- a/gwt20/pom.xml
+++ b/gwt20/pom.xml
@@ -106,13 +106,12 @@
 			  <artifactId>atmosphere-jersey</artifactId>
 			  <version>${atmosphere-version}</version>
 			</dependency>
-			<dependency>
-			  <groupId>org.atmosphere</groupId>
-			  <artifactId>atmosphere-jquery</artifactId>
-			  <version>${atmosphere-version}</version>
-        <type>war</type>
-        <scope>runtime</scope>
-			</dependency>      
+            <dependency>
+                <groupId>org.atmosphere.client</groupId>
+                <artifactId>jquery</artifactId>
+                <version>${javascript-version}</version>
+                <type>war</type>
+            </dependency>
             <dependency>
                 <groupId>org.atmosphere</groupId>
                 <artifactId>gwtprojsonserializer</artifactId>
