--- a/pom.xml
+++ b/pom.xml
@@ -469,6 +469,7 @@
         <jetty-version>6.1.22</jetty-version>
         <jersey-version>1.14</jersey-version>
         <atmosphere-version>1.1.0.RC4</atmosphere-version>
+        <javascript-version>2.0.0.RC1</javascript-version>
         <jaxb-version>2.1</jaxb-version>
         <jackson-version>1.3.1</jackson-version>
         <junit-version>3.8.1</junit-version>
