--- a/gwt20/modules/atmosphere-gwt20-client/pom.xml
+++ b/gwt20/modules/atmosphere-gwt20-client/pom.xml
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>org.atmosphere.client</groupId>
             <artifactId>javascript</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>${javascript-version}</version>
             <type>war</type>
             <scope>compile</scope>
         </dependency>
