--- a/rmi/samples/pom.xml
+++ b/rmi/samples/pom.xml
@@ -40,7 +40,7 @@
         <dependency>
             <groupId>org.atmosphere.samples</groupId>
             <artifactId>atmosphere-jersey-pubsub</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>${atmosphere-version}</version>
             <type>war</type>
         </dependency>
         <dependency>
