--- a/gwt20/samples/gwt20-jersey-rpc/pom.xml
+++ b/gwt20/samples/gwt20-jersey-rpc/pom.xml
@@ -4,13 +4,13 @@
     <parent>
         <groupId>org.atmosphere.extensions</groupId>
         <artifactId>atmosphere-gwt20-project</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.1.0.RC3</version>
         <relativePath>../..</relativePath>
     </parent>
 
     <groupId>org.atmosphere.samples</groupId>
     <artifactId>gwt20-jersey-rpc</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0.RC3</version>
     <packaging>war</packaging>
     <name>gwt20-jersey-rpc</name>
 
