--- a/guice/samples/di-guice-sample/pom.xml
+++ b/guice/samples/di-guice-sample/pom.xml
@@ -3,14 +3,14 @@
     <parent>
         <groupId>org.atmosphere</groupId>
         <artifactId>atmosphere-extension-project</artifactId>
-        <version>1.1.0.RC3</version>
+        <version>1.1.0-SNAPSHOT</version>
         <relativePath>../../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.atmosphere.samples</groupId>
     <artifactId>atmosphere-di-guice-sample</artifactId>
     <packaging>war</packaging>
-    <version>1.1.0.RC3</version>
+    <version>1.1.0-SNAPSHOT</version>
     <name>atmosphere-di-guice-sample</name>
     <dependencies>
         <dependency>
