--- a/pom.xml
+++ b/pom.xml
@@ -467,8 +467,9 @@
 
     <properties>
         <jetty-version>6.1.22</jetty-version>
-        <jersey-version>1.14</jersey-version>
+        <jersey-version>1.17</jersey-version>
         <atmosphere-version>2.0.0-SNAPSHOT</atmosphere-version>
+        <compat-version>1.0.13</compat-version>
         <javascript-version>2.0.0-SNAPSHOT</javascript-version>
         <jaxb-version>2.1</jaxb-version>
         <jackson-version>1.3.1</jackson-version>
