--- a/hazelcast/samples/pom.xml
+++ b/hazelcast/samples/pom.xml
@@ -2,7 +2,7 @@
     <parent>
         <groupId>org.atmosphere</groupId>
         <artifactId>atmosphere-extension-project</artifactId>
-        <version>1.1.0.RC4</version>
+        <version>1.1.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
