--- a/socketio/samples/socketio-chat/pom.xml
+++ b/socketio/samples/socketio-chat/pom.xml
@@ -3,14 +3,14 @@
     <parent>
         <groupId>org.atmosphere</groupId>
         <artifactId>atmosphere-extension-project</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.1.0.RC5</version>
         <relativePath>../../../pom.xml</relativePath>
     </parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.atmosphere.samples</groupId>
 	<artifactId>atmosphere-socketio-chat</artifactId>
 	<packaging>war</packaging>
-	<version>1.1.0-SNAPSHOT</version>
+	<version>1.1.0.RC5</version>
 	<name>atmosphere-socketio-chat</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
