--- a/spring/modules/pom.xml
+++ b/spring/modules/pom.xml
@@ -3,13 +3,13 @@
     <parent>
         <groupId>org.atmosphere</groupId>
         <artifactId>atmosphere-extension-project</artifactId>
-        <version>1.1.0.RC5</version>
+        <version>1.1.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <groupId>org.atmosphere</groupId>
     <artifactId>atmosphere-spring</artifactId>
     <packaging>jar</packaging>
-    <version>1.1.0.RC5</version>
+    <version>1.1.0-SNAPSHOT</version>
     <name>atmosphere-spring</name>
     <url>https://github.com/Atmosphere/atmosphere</url>
 
