--- a/gwt20/samples/gwt20-managed-rpc/src/main/webapp/WEB-INF/web.xml
+++ b/gwt20/samples/gwt20-managed-rpc/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,10 @@
         <servlet-class>org.atmosphere.cpr.AtmosphereServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
         <async-supported>true</async-supported>
+        <init-param>
+            <param-name>org.atmosphere.cpr.packages</param-name>
+            <param-value>org.atmosphere.samples.server</param-value>
+        </init-param>
     </servlet>
     <servlet-mapping>
         <servlet-name>AtmosphereServlet</servlet-name>
