--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
             <plugin>
                 <groupId>org.mortbay.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
-                <version>${jetty8-version}</version>
+                <version>7.6.0.RC4</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -105,7 +105,7 @@
                             <url>${project.url}</url>
                             <implementation-version>${project.version}</implementation-version>
                             <package>org.atmosphere</package>
-                        </manifestEntries>
+                        </manifestEntries>          R
                     </archive>
                 </configuration>
             </plugin>
