--- a/gwt20/modules/atmosphere-gwt20-jersey/pom.xml
+++ b/gwt20/modules/atmosphere-gwt20-jersey/pom.xml
@@ -20,6 +20,7 @@
         <dependency>
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-jersey</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.atmosphere.extensions</groupId>
