--- a/spring/modules/pom.xml
+++ b/spring/modules/pom.xml
@@ -18,6 +18,7 @@
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-runtime</artifactId>
             <version>${atmosphere-version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
