First drop for Atmosphere/atmosphere#630

--- a/pom.xml
+++ b/pom.xml
@@ -269,6 +269,7 @@
         -->
 		<module>gwt20</module>
         <module>rmi/modules</module>
+        <module>sockjs/modules</module>
     </modules>
     <reporting>
         <outputDirectory>target/site</outputDirectory>
