--- a/pom.xml
+++ b/pom.xml
@@ -493,7 +493,7 @@
         <scala.version>2.9.2</scala.version>
         <shade-version>1.2.1</shade-version>
         <felix-version>2.3.6</felix-version>
-        <jms-version>1.1</jms-version>
+        <jms-version>1.1-rev-1</jms-version>
         <guice-version>3.0</guice-version>
         <spring-version>4.1.3.RELEASE</spring-version>
         <wicket.version>1.4.12</wicket.version>
